feat: ui of avatar card

--- a/frontend/src/assets/less/common.less
+++ b/frontend/src/assets/less/common.less
@@ -1,3 +1,5 @@
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
+
 @background: #282a36;
 @current-line: #44475a;
 @selection: #44475a;
@@ -10,3 +12,15 @@
 @purple: #bd93f9;
 @red: #ff5555;
 @yellow: #f1fa8c;
+
+body {
+  // padding: 0 !important;
+  // margin: 0 !important;
+  padding: 0;
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+  font-size: 20px;
+  background-color: @background;
+  color: @foreground;
+}
