feat: send and save file

--- a/frontend/src/assets/less/common.less
+++ b/frontend/src/assets/less/common.less
@@ -120,3 +120,12 @@ body {
   display: inline-block;
   width: 100px;
 }
+
+a,
+a:link,
+a:visited,
+a:focus,
+a:hover,
+a:active {
+  color: @green;
+}
